// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EncounterLinks should render a new button 1`] = `
<div
  className="base-link-group nice-btn-group"
>
  <a
    className="cursor-pointer nice-btn icon fa-plus"
    href="/encounter/new"
    onClick={[Function]}
  >
    New
  </a>
</div>
`;

exports[`Component: EncounterLinks should render without props 1`] = `
<div
  className="base-link-group nice-btn-group"
/>
`;

exports[`Component: EncounterLinks should show a view and edit button 1`] = `
<div
  className="base-link-group nice-btn-group"
>
  <a
    className="cursor-pointer nice-btn icon fa-eye"
    href="/encounter/show/10"
    onClick={[Function]}
  >
    View
  </a>
  <a
    className="cursor-pointer nice-btn icon fa-pencil"
    href="/encounter/edit/10"
    onClick={[Function]}
  >
    Edit
  </a>
</div>
`;

exports[`Component: EncounterLinks should not show buttons for players 1`] = `
<div
  className="base-link-group nice-btn-group"
/>
`;
